Ignore Raw Assets

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,7 @@ Art Assets\.meta
 Assets/Editor Default Resources/
 
 Assets/Editor Default Resources\.meta
+
+\[RawAssets\]/
+
+\[RawAssets\]\.meta
