Seperated Input & Components that need AdvVar in to new asmdef

--- a/Assets/FoCsComponents.AdvVar/FoCsComponents.AdvVar.asmdef
+++ b/Assets/FoCsComponents.AdvVar/FoCsComponents.AdvVar.asmdef
@@ -1,7 +1,9 @@
 {
-    "name": "FoCsAdvVar",
+    "name": "FoCsComponents.AdvVar",
     "references": [
-        "FoCsLibrary"
+        "FoCsLibrary",
+        "FoCsComponents",
+        "FoCsAdvVar"
     ],
     "optionalUnityReferences": [],
     "includePlatforms": [],
