Edited Asmdef files to meet with the Unity Package requirements
Requirements @ 
 https://docs.unity3d.com/Manual/cus-asmdef.html

--- a/Assets/FoCsAdvVar/Editor/FoCs.AdvVar.Editor.asmdef
+++ b/Assets/FoCsAdvVar/Editor/FoCs.AdvVar.Editor.asmdef
@@ -1,7 +1,10 @@
 {
-    "name": "FoCsLibrary.Editor",
+    "name": "FoCs.AdvVar.Editor",
     "references": [
-        "FoCsLibrary"
+        "FoCs.AdvVar",
+        "FoCs.Library",
+        "FoCs.Library.Editor",
+        "FoCs.Components"
     ],
     "optionalUnityReferences": [],
     "includePlatforms": [
