--- a/Assets/FoCsAdvVar/Runtime/FoCs.AdvVar.asmdef
+++ b/Assets/FoCsAdvVar/Runtime/FoCs.AdvVar.asmdef
@@ -1,9 +1,7 @@
 {
-    "name": "FoCsComponents.AdvVar",
+    "name": "FoCs.AdvVar",
     "references": [
-        "FoCsLibrary",
-        "FoCsComponents",
-        "FoCsAdvVar"
+        "FoCs.Library"
     ],
     "optionalUnityReferences": [],
     "includePlatforms": [],
