--- a/Assets/FoCsDebugging/Runtime/FoCs.Debugging.asmdef
+++ b/Assets/FoCsDebugging/Runtime/FoCs.Debugging.asmdef
@@ -1,7 +1,7 @@
 {
-    "name": "FoCsAdvVar",
+    "name": "FoCs.Debugging",
     "references": [
-        "FoCsLibrary"
+        "FoCs.Library"
     ],
     "optionalUnityReferences": [],
     "includePlatforms": [],
