--- a/Assets/FoCsLibrary/Editor/FoCs.Library.Editor.asmdef
+++ b/Assets/FoCsLibrary/Editor/FoCs.Library.Editor.asmdef
@@ -1,10 +1,12 @@
 {
-    "name": "FoCsComponents",
+    "name": "FoCs.Library.Editor",
     "references": [
-        "FoCsLibrary"
+        "FoCs.Library"
     ],
     "optionalUnityReferences": [],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false
 }
